service.yml
apiVersion: v1
kind: Service
metadata:
  name: jquerry-service
  namespace: jquerry
spec:
  selector:
    app: jquerry
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
